@@ -1,0 +1,16 @@
+Output Info:
+  show_time_lapse    = FALSE
+  show_raw_text      = FALSE
+  suppress_data      = FALSE
+  protect_prompt     = FALSE
+  no_hints_send      = FALSE
+  no_hints_recv      = FALSE
+  no_hints_info      = FALSE
+  silent             = 0
+  dump_mail          = FALSE
+  hide_send          = FALSE
+  hide_receive       = FALSE
+  hide_informational = FALSE
+  hide_all           = FALSE
+  trans_fh_of        = /path/to/OUTDIR/05002.out (GLOB(0xdeadbeef),GLOB(0xdeadbeef))
+  trans_fh_ef        = STDERR (GLOB(0xdeadbeef),GLOB(0xdeadbeef))
